Fixed out of bound.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -2,6 +2,6 @@
 {
 	background-image: url(img/test_image.jpg);
 	background-size: 100% 100%;
-	width: 75vw;
-	height: 75vh;
+	width: 1248px;
+	height: 702px;
 }
